# involution-engine

./: .bandit  .dockerignore  .env.example  .git-objects.txt  .gitattributes  .gitignore  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DELIVERABLE_SUMMARY.md  DEPLOY.md  DEPLOYMENT.md  ENGINE_PARITY_KNOBS.md  HANDOFF.md  PHASE1_5_COMPLETION.md  PHASE1_COMPLETION.md  PHASE3_VALIDATION.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.1.0.md  RENDER_DEPLOY.md  SECURITY.md  TIMEZONE_FIX_COMPLETED.md  TIMEZONE_FIX_NEEDED.md  baseline_ephemeris_study.json  baseline_positions.csv  compare_positions.py  docker-compose.canary.yml  docker-compose.prod.yml  docker-compose.yml  engine_positions_template.json  expected_positions_template.csv  expected_positions_template.json  generate_fagan_test_data.py  gunicorn.conf.py  mypy.ini  next.config.js  package-lock.json  package.json  (+20 more)
.github/workflows/: ci.yml  comprehensive-ci.yml  drift.yml  monthly-tzdb-update.yml  nightly-comprehensive.yml  nightly-e2e.yml  nightly-smoke.yml  qa.yml  quick-check.yml  test-comprehensive.yml  time-resolver-ci.yml
app/: globals.css  layout.tsx  page.tsx
app/ephemeris/: page.tsx
app/research/: page.tsx
components/: ChartWheelView.tsx  EphemerisForm.tsx  PluginHost.tsx  PresetChips.tsx  ResearchTableView.tsx  SettingsDrawer.tsx  ThemeProvider.tsx
docker/: nginx.conf  time-resolver.Dockerfile  time-resolver.docker-compose.yml
docker/time-resolver/: Makefile  OPERATIONAL_GUIDE.md  README.md  openapi.yaml  requirements.txt  test_service.py  validate_updates.py
docs/: accuracy.md  api.md  ci-cd.md  error-taxonomy.md  roadmap.md
docs/deploy/: canary.md
docs/openapi/: v1.1.yaml
docs/users/: accuracy-guarantees.md  migrating-from-swiss.md  quickstart-astrologers.md
engine/: Dockerfile  SMOKE_TEST.md  checksums.txt  docker-compose.prod.yml  download_kernels.sh  get_golden_values.py  main.py  package-lock.json  package.json  security.py  security_audit_20250927_191211.json  time_resolver.py  time_resolver_v2.py
engine/kernels/: involution.tm  involution_de440.tm  involution_de441.tm
examples/fagan_multi_date_suite/: 19500101_000000_ayanamsha_FB_reference.json  19500101_000000_engine_sidereal_FB.json  19500101_000000_engine_tropical.json  19620703_033300_ayanamsha_FB_reference.json  19620703_033300_engine_sidereal_FB.json  19620703_033300_engine_tropical.json  20000101_120000_ayanamsha_FB_reference.json  20000101_120000_engine_sidereal_FB.json  20000101_120000_engine_tropical.json  20250101_000000_ayanamsha_FB_reference.json  20250101_000000_engine_sidereal_FB.json  20250101_000000_engine_tropical.json  run_fagan_multi_date_check.py
examples/five_random/: README.md  accuracy_report.csv  accuracy_summary.json  charts_input.csv  engine_positions_tidy.csv  reference_filled.csv  reference_skeleton.csv  run.sh
examples/http/: README.md  fort-knox-request.json  fort-knox-response.json  positions-fort-knox-1962.json  positions-sidereal-example.json  time-resolve-fort-knox-1962.json
gateway/: README.md  package.json  server.js  test-routing.js
kernels/: involution.tm
lib/: astroMath.ts  astroTypes.ts  calc.ts  plugins.ts  researchTypes.ts  settings.test.ts  settings.ts  time.ts
observability/: README.md  grafana-dashboard.json
ops/drift/: drift_check.py
ops/nginx/: canary.conf
plugins/: aspects.tsx  houses.test.tsx  houses.tsx
scripts/: compute_kernel_checksums.sh  diagnose.sh  qa.sh  quality_check.sh  security_audit.sh  security_monitor.sh
server/: Dockerfile.de440-1900  Dockerfile.de440-full  Dockerfile.de440-modern  README.md  config.yaml  quick_validation.py  requirements.txt
server/app/: __init__.py  api.py  caching.py  caching_redis.py  config.py  errors.py  main.py  ratelimit.py  schemas.py
server/tests/: conftest.py  test_ayanamsha_registry.py  test_equatorial_j2000.py  test_error_mapper.py  test_flexible_dates.py  test_healthz.py  test_observability.py  test_phase2_integration.py  test_positions_e2e.py  test_rate_limiting.py  test_redis_cache.py
services/spice/: .diag_commit.txt  .dockerignore  Dockerfile  (+13 more)
tests/: TEST_PLAN.md  conftest.py  ephemeris.spec.ts  requirements-test.txt  test_api_contract.py  test_ayanamsa_accuracy.py  test_ayanamsa_properties.py  test_calculations.py  test_contracts.py  test_ephemeris_edge_cases.py  test_gap_fold_handling.py  test_golden_1962_fort_knox.py  test_golden_positions.py  test_houses.py  test_houses_golden.py  test_monitoring_observability.py  test_performance_benchmarks.py  test_precession_regression.py  test_properties_edges.py  test_security_ops.py  test_simple.py  test_tropical_sidereal_consistency.py
time_resolver/: openapi_time_resolver.yaml  patches_us_pre1967.json  test_results.csv
ui/: next.config.ts  package-lock.json  package.json
(+101 files in other folders)
